p15034 Unified CDN URLs.